# server/src/main/java/fr/myhome/server/exception/UsernameAlreadyExistException.java
@@ -1,0 +1,9 @@
+package fr.myhome.server.exception;
+
+public class UsernameAlreadyExistException extends FunctionalException {
+
+    public UsernameAlreadyExistException(final String userName) {
+        super("The username " + userName + " are already used");
+    }
+
+}
